fix: vertically and horizontally align grid and preserve aspect ratio

--- a/style.css
+++ b/style.css
@@ -1,58 +1,58 @@
 :root {
-    --grid-border-color: red;
-    --grid-border-width: 10px;
+    --grid-size: 80vmin;
+    --grid-cell-size: 100%;
+    --grid-lines-color: red;
+    --grid-lines-width: 1vmin;
     --bg-grid-lines-color: lightblue;
     --bg-grid-lines-width: 20px;
 }
 
-body {
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+.grid-lines {
     background-image: linear-gradient(to right, var(--bg-grid-lines-color) 1px, transparent 1px), linear-gradient(to bottom, var(--bg-grid-lines-color) 1px, transparent 1px);
     background-size: var(--bg-grid-lines-width) var(--bg-grid-lines-width);
-    margin: 0;
-    padding: 10%;
+}
+
+.center {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 #grid {
-    width: 100%;
-    height: 100%;
+    width: var(--grid-size);
+    height: var(--grid-size);
     display: grid;
-    grid-template-columns: repeat(3, calc(100% / 3));
-    grid-template-rows: repeat(3, calc(100% / 3));
+    grid-template-columns: repeat(3, calc(var(--grid-size) / 3));
+    grid-template-rows: repeat(3, calc(var(--grid-size) / 3));
 }
 
 .cell {
     box-sizing: border-box;
-    display: inline-block;
-    height: inherit;
-    width: inherit;
+    display: block;
+    height: var(--grid-cell-size);
+    width: var(--grid-cell-size);
 }
 
 .cell:nth-child(3n+2) {
-    border-left-color: var(--grid-border-color);
-    border-left-width: var(--grid-border-width);
+    border-left-color: var(--grid-lines-color);
+    border-left-width: var(--grid-lines-width);
     border-left-style: solid;
-    border-right-color: var(--grid-border-color);
-    border-right-width: var(--grid-border-width);
+    border-right-color: var(--grid-lines-color);
+    border-right-width: var(--grid-lines-width);
     border-right-style: solid;
 }
 
 .cell:nth-child(n+4):nth-child(-n+6) {
-    border-top-color: var(--grid-border-color);
-    border-top-width: var(--grid-border-width);
+    border-top-color: var(--grid-lines-color);
+    border-top-width: var(--grid-lines-width);
     border-top-style: solid;
-    border-bottom-color: var(--grid-border-color);
-    border-bottom-width: var(--grid-border-width);
+    border-bottom-color: var(--grid-lines-color);
+    border-bottom-width: var(--grid-lines-width);
     border-bottom-style: solid;
 }
-/* .cell use {
-    stroke-dasharray: 1000;
-    animation: stroke 3s ease-out forwards;
-}
-@keyframes stroke {
-    from {
-        stroke-dashoffset: 1000;
-    }
-    to {
-        stroke-dashoffset: 0;
-    }
-} */
